@@ -7,7 +7,6 @@ Open bugs/issues:
 For the coming release:
 
 - Updated RCSR archive and add nets tsb, tsg, tsh as per email.
-- Round off coordinates in parser error messages to four decimal places.
 - Remove warning about "incorrect embedding" when input has collisions.
 - Default unit cell coordinates are incorrect, e.g. for R3:R
 
